Payment table data vertical align issue fixed

--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -10,15 +10,17 @@
     background-color: #eaeaea;
     color: #666666;
     font-family: 'Raleway', sans-serif;
-    font-size: 10pt;
+    font-size: 14px;
+    line-height: 1.2;
 }
 
 .table > tbody > tr > td {
     font-family: 'Hind', sans-serif;
     font-weight: 400;
-    font-size: 10.5pt;
+    font-size: 13px;
     color: #666666;
     vertical-align: middle;
+    line-height: 1.2;
 }
 
 .space {
