--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1743,7 +1743,7 @@ a .offer-box:last-child{
 
 .btn-brand-payment-down-invoice{
   @extend  .br-btn-primary;
-  margin: 25px 3px 5px 5px;
+  margin: 25px 0 5px 5px;
   padding: 5px 20px;
   @media (max-width: 768px) {
     width: 100%;
